# haskell

./: HtmlServer.hs  Parser.hs  README.md  TemperatureReader.hs  app.cabal
static/: screen.css
